# libsde-utils-jansson

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile.am  Makefile.in  configure  configure.ac  sde-utils-jansson-0.pc.in  sde-utils-jansson-1.0.pc.in
include/: Makefile.am  Makefile.in
include/sde-utils-jansson/: utils.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  utils.c  utils.h
